# lab09

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  LB06.txt  LB_05.txt  LB_07.txt  LB_08_1.txt  LB_09.txt  README.md  aux | grep less  print1.cpp
_builds/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  check[1]_include.cmake  check[1]_tests.cmake  cmake_install.cmake
_builds/Testing/Temporary/: CTestCostData.txt
_builds/clang-cxx14/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  check[1]_include.cmake  check[1]_tests.cmake  cmake_install.cmake  demo
_builds/clang-cxx14/_3rdParty/polly/: saved-arguments
_builds/default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  check[1]_include.cmake  check[1]_tests.cmake  cmake_install.cmake
_builds/default/_3rdParty/polly/: saved-arguments
_logs/polly/clang-cxx14/: log-0.txt  log-1.txt  log.txt
_logs/polly/default/: log-0.txt  log.txt
demo/: main.cpp
tests/: test1.cpp  test_print.cpp
