cmake_minimum_required(VERSION 3.10)
project(print VERSION 0.1.0)
set(PRINT_VERSION_MAJOR 0)
set(PRINT_VERSION_MINOR 1)
set(PRINT_VERSION_PATCH 0)
set(PRINT_VERSION_TWEAK 0)
set(PRINT_VERSION "...")
set(PRINT_VERSION_STRING "v")
add_library(print STATIC print.cpp)
target_include_directories(print PUBLIC )
option(BUILD_TESTS "Build tests" OFF)
if(BUILD_TESTS)
  enable_testing()
  add_subdirectory(third-party/gtest)
  file(GLOB TEST_SOURCES tests/*.cpp)
  add_executable(check )
  target_link_libraries(check print gtest_main)
  add_test(NAME check COMMAND check)
endif()
include(InstallRequiredSystemLibraries)
set(CPACK_PACKAGE_NAME "print")
set(CPACK_PACKAGE_VENDOR "Dr0-ozdik777")
set(CPACK_PACKAGE_CONTACT "you@example.com")
set(CPACK_PACKAGE_VERSION )
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Static print library")
set(CPACK_RESOURCE_FILE_LICENSE "/LICENSE")
include(CPack)

include(CPackConfig.cmake)
